defense position fix on fields and soccer field background on soccer page

--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -196,7 +196,12 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                    <div class="nl-player-block--data">
+                      <p>PATRIOTS</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="nl-team-list nl-my-teams hide">
