--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -955,7 +955,13 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>PATRIOTS</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="nl-team-list nl-my-teams hide">
