lined out name manager on mobile better, soccer background added on matching page, search bar size increase on create team page

--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -97,7 +97,7 @@
       </div>
     </header>
     <main>
-      <section class="nl-section nl-players">
+      <section class="nl-section nl-players soccer">
         <div class="container container-narrow">
           <div class="row">
             <div class="col-md-12">
