--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -221,7 +221,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3>
+                        <h3>team NLC2</h3><img src="assets/img/img-players.png" alt="shirt">
                       </div>
                     </div>
                   </div>
