made draft button on mobile bigger, improved look for soccer field on mobile with placements of shirts and width field, added orange letters to position

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -234,7 +234,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">G</p>
+                                    <p class="nl-position orange">G</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -285,7 +285,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -302,7 +302,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">DL</p>
+                                    <p class="nl-position orange">DL</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -356,7 +356,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -373,7 +373,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">DR</p>
+                                    <p class="nl-position orange">DR</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -424,7 +424,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -441,7 +441,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">DAL</p>
+                                    <p class="nl-position orange">DAL</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -492,7 +492,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -509,7 +509,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">DAR</p>
+                                    <p class="nl-position orange">DAR</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -560,7 +560,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -577,7 +577,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">CM</p>
+                                    <p class="nl-position orange">CM</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -628,7 +628,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -645,7 +645,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">RWM</p>
+                                    <p class="nl-position orange">RWM</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -696,7 +696,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -713,7 +713,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">LWM</p>
+                                    <p class="nl-position orange">LWM</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -764,7 +764,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -781,7 +781,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">RS</p>
+                                    <p class="nl-position orange">RS</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -832,7 +832,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -849,7 +849,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">LS</p>
+                                    <p class="nl-position orange">LS</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -900,7 +900,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -917,7 +917,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p class="nl-position">ST</p>
+                                    <p class="nl-position orange">ST</p>
                                   </div>
                                   <div class="col-6">
                                     <p>28.33</p>
@@ -968,7 +968,7 @@
                                     <p><span>OPP:</span></p>
                                   </div>
                                   <div class="col-6">
-                                    <p>Gameday</p>
+                                    <p>Patriots</p>
                                   </div>
                                   <div class="col-6">
                                     <p><span>Gameday:</span></p>
@@ -1010,9 +1010,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>G</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">GK</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1024,9 +1024,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DL</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">D</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1038,9 +1038,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DR</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">D</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1052,9 +1052,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAL</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">D</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1066,9 +1066,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAR</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">D</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1080,9 +1080,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>CM</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">M</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1094,9 +1094,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RWM</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">M</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1108,9 +1108,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWM</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">M</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1122,9 +1122,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RS</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">A</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1136,9 +1136,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LS</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">A</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
@@ -1150,9 +1150,9 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>ST</td>
-                              <td>RMA</td>
                               <td>ACT</td>
+                              <td class="orange">A</td>
+                              <td>RMA</td>
                               <td>FCB</td>
                               <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
