added hidden draft button to even out tables, fixed typos on create team mobile view

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -1013,7 +1013,9 @@
                       <table class="table table-striped">
                         <thead>
                           <tr>
-                            <th></th>
+                            <th> 
+                              <button class="btn btn-primary btn-sm visibility-hidden">Draft</button>
+                            </th>
                             <th class="avatar">NAME</th>
                             <th>SALARY</th>
                             <th>FP</th>
