final login and registration pages

--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -35,9 +35,9 @@
     </header>
     <main>
       <section class="nl-section login-wrapper">
-        <div class="row">
-          <div class="col-1 col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
-          <div class="col-10 col-sm-8 col-md-8 col-lg-8 col-xl-6">
+        <div class="row center-div">
+          <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
+          <div class="col-8 col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
               <div role="document" class="block-dialog"></div>
               <div class="block-content">
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-          <div class="col-1 col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
+          <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
         </div>
       </section>
     </main>
