fixed scroller on scroller on football page, put extra data on create team list view, changed cut button to red

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1412,102 +1412,135 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
                             <td class="pos">G</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">DL</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">D</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">DR</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">D</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">DAL</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">D</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">DAR</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">D</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">CM</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">M</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">RWM</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">M</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">LWM</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">M</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">RS</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">S</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">LS</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">S</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
-                            <td class="pos">ST</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
+                            <td class="pos">S</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                         </tbody>
