--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -1028,7 +1028,7 @@
                           </tr>
                         </thead>
                       </table>
-                      <div class="nl-table-scroll">
+                      <div class="nl-table-scroll2">
                         <table class="table table-striped">
                           <tbody>
                             <tr>
@@ -1039,6 +1039,34 @@
                               <td>$21000</td>
                               <td>20</td>
                               <td class="orange">K</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td class="orange">QB</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td class="orange">RB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1319,84 +1347,111 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">RMA-BAR 3:00PM</p>
+                            </td>
                             <td class="pos">FLEX</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">K</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">RB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">RB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">QB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">WR</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">WR</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">TE</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                           <tr>
-                            <td>Player name</td>
+                            <td> 
+                              <p>Player name</p>
+                              <p class="gametime">TOT-BOR 2:00PM</p>
+                            </td>
                             <td class="pos">DEF</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                              <button class="btn btn-sm btn-warning">cut</button>
                             </td>
                           </tr>
                         </tbody>
